--- a/src/main/webapp/archives.html
+++ b/src/main/webapp/archives.html
@@ -315,7 +315,7 @@
                             <td><a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12333640')">Release Notes</a></td>
                         </tr>
                         <tr>
-                            <td>4.0.2</h3>
+                            <td>4.0.2</td>
                             <td><a
                                     href="http://archive.apache.org/dist/karaf/4.0.2/apache-karaf-4.0.2.tar.gz">tar.gz</a> |
                                 <a href="http://archive.apache.org/dist/karaf/4.0.2/apache-karaf-4.0.2.zip">zip</a>
@@ -328,7 +328,7 @@
                         </tr>
 
                         <tr>
-                            <td>4.0.1</h3>
+                            <td>4.0.1</td>
                             <td><a
                                     href="http://archive.apache.org/dist/karaf/4.0.1/apache-karaf-4.0.1.tar.gz">tar.gz</a> |
                                 <a href="http://archive.apache.org/dist/karaf/4.0.1/apache-karaf-4.0.1.zip">zip</a>
@@ -341,7 +341,7 @@
                         </tr>
 
                         <tr>
-                            <td>4.0.0</h3>
+                            <td>4.0.0</td>
                             <td><a
                                     href="http://archive.apache.org/dist/karaf/4.0.0/apache-karaf-4.0.0.tar.gz">tar.gz</a> |
                                 <a href="http://archive.apache.org/dist/karaf/4.0.0/apache-karaf-4.0.0.zip">zip</a>
@@ -354,7 +354,20 @@
                         </tr>
 
                         <tr>
-                            <td>3.0.9</h3>
+                            <td>3.0.10</td>
+                            <td><a
+                                    href="http://archive.apache.org/dist/karaf/3.0.10/apache-karaf-3.0.10.tar.gz">tar.gz</a> |
+                                <a href="http://archive.apache.org/dist/karaf/3.0.10/apache-karaf-3.0.10.zip">zip</a>
+                            </td>
+                            <td><a
+                                    href="http://archive.apache.org/dist/karaf/3.0.10/apache-karaf-3.0.10-src.tar.gz">tar.gz</a>
+                                | <a href="http://archive.apache.org/dist/karaf/3.0.10/apache-karaf-3.0.10-src.zip">zip</a>
+                            </td>
+                            <td><a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12346390')">Release Notes</a></td>
+                        </tr>
+
+                        <tr>
+                            <td>3.0.9</td>
                             <td><a
                                     href="http://archive.apache.org/dist/karaf/3.0.9/apache-karaf-3.0.9.tar.gz">tar.gz</a> |
                                 <a href="http://archive.apache.org/dist/karaf/3.0.9/apache-karaf-3.0.9.zip">zip</a>
@@ -367,7 +380,7 @@
                         </tr>
 
                         <tr>
-                            <td>3.0.8</h3>
+                            <td>3.0.8</td>
                             <td><a
                                     href="http://archive.apache.org/dist/karaf/3.0.8/apache-karaf-3.0.8.tar.gz">tar.gz</a> |
                                 <a href="http://archive.apache.org/dist/karaf/3.0.8/apache-karaf-3.0.8.zip">zip</a>
@@ -380,7 +393,7 @@
                         </tr>
 
                         <tr>
-                            <td>3.0.7</h3>
+                            <td>3.0.7</td>
                             <td><a
                                     href="http://archive.apache.org/dist/karaf/3.0.7/apache-karaf-3.0.7.tar.gz">tar.gz</a> |
                                 <a href="http://archive.apache.org/dist/karaf/3.0.7/apache-karaf-3.0.7.zip">zip</a>
@@ -393,7 +406,7 @@
                         </tr>
 
                         <tr>
-                            <td>3.0.6</h3>
+                            <td>3.0.6</td>
                             <td><a
                                     href="http://archive.apache.org/dist/karaf/3.0.6/apache-karaf-3.0.6.tar.gz">tar.gz</a> |
                                 <a href="http://archive.apache.org/dist/karaf/3.0.6/apache-karaf-3.0.6.zip">zip</a>
@@ -406,7 +419,7 @@
                         </tr>
 
                         <tr>
-                            <td>3.0.5</h3>
+                            <td>3.0.5</td>
                             <td><a
                                     href="http://archive.apache.org/dist/karaf/3.0.5/apache-karaf-3.0.5.tar.gz">tar.gz</a> |
                                 <a href="http://archive.apache.org/dist/karaf/3.0.5/apache-karaf-3.0.5.zip">zip</a>
