--- a/src/main/webapp/documentation.html
+++ b/src/main/webapp/documentation.html
@@ -237,6 +237,13 @@
                         </a></td>
                     </tr>
                     <tr>
+                        <td><strong>JAAS</strong></td>
+                        <td>using the Karaf Security service in different way.</td>
+                        <td><a href="https://github.com/apache/karaf/tree/master/examples/karaf-jaas-example" target="_blank">
+                            <img src="images/github.png" width="24px">
+                        </a></td>
+                    </tr>
+                    <tr>
                         <td><strong>JDBC</strong></td>
                         <td>using simple JDBC implementation with Pax-JDBC and an Apache Derby embedded database.</td>
                         <td><a href="https://github.com/apache/karaf/tree/master/examples/karaf-jdbc-example" target="_blank">
