--- a/src/main/webapp/news.html
+++ b/src/main/webapp/news.html
@@ -82,9 +82,9 @@
             <div class="card-body d-flex flex-column align-items-start">
               <strong class="d-inline-block mb-2 text-success"><i class="fas fa-rocket"></i> Announce</strong>
               <h3 class="mb-0">
-                <a class="text-dark">Karaf Runtime 4.2.7</a>
+                <a class="text-dark">Karaf Runtime 4.2.8</a>
               </h3>
-              <div class="mb-1 text-muted">September 29, 2019</div>
+              <div class="mb-1 text-muted">January 14, 2020</div>
               <p class="card-text mb-auto">This is an update patch for Apache Karaf 4.2.x series. We invite all users to upgrade to this new stable series, bringing a lot of fixes, improvements and dependency upgrades.</p>
               <a href="#">Learn more</a>
             </div>
@@ -104,6 +104,28 @@
         <div class="row mb-5 mt-5">
             <div class="col-md-10">
               <h2 class="pb-3 mb-4 font-italic border-bottom"><i class="fas fa-bullhorn"></i> Fresh news</h2>
+
+              <div class="pb-4 mb-3 border-bottom">
+                <h3 class="text-dark">Karaf Runtime 4.2.8 has been released! <span class="text-muted">January 14, 2020</span></h3>
+                <p>This is an update patch for Apache Karaf 4.2.x, containing bug fixes, improvements and dependency upgrades.</p>
+                <p>Among this new features, we have:</p>
+                <ul>
+                  <li>HTTP proxy should be able to support several addresses with balancing policies</li>
+                  <li>Add filter attribute on command @Reference annotation</li>
+                  <li>Maven plugin feature to define custom bundle location prefixes</li>
+                  <li>Be able to override the Karaf distribution in KarafTestSupport</li>
+                  <li>Improve the jaas command to be able to add a new realm</li>
+                  <li>Add JMXMP support</li>
+                </ul>
+                <div class="pb-3">
+                  <em>See the release note for the librairies update.</em>
+                </div>
+                <a class="btn btn-outline-primary" href="download.html">Download &raquo;</a>
+                <a class="btn btn-outline-primary" href="https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12345539" target="_blank">Release Notes &raquo;</a>
+              </div><!-- /.blog-post -->
+
+              <!-- 2019 -->
+              <h2 id="2019" class="pb-3 mb-4 font-italic border-bottom">2019</h2>
 
               <div class="pb-4 mb-3">
                 <h3 class="text-dark">Karaf Cave 4.2.1 has been released ! <span class="text-muted">November 29, 2019</span></h3>
@@ -263,7 +285,7 @@
                       <td>7.2.9</td>
                     </tr>
                     <tr>
-                      <td><strong>Jetty/strong></td>
+                      <td><strong>Jetty</strong></td>
                       <td>9.4.18</td>
                     </tr>
                     <tr>
@@ -1861,6 +1883,7 @@
               <div class="p-3">
                 <h4 class="font-italic">Archives</h4>
                 <ol class="list-unstyled mb-0">
+                    <li><a href="#2019">2019</a></li>
                     <li><a href="#2018">2018</a></li>
                     <li><a href="#2017">2017</a></li>
                     <li><a href="#2016">2016</a></li>
