Add Netflix story (#44)
Add Netflix story

--- a/src/main/webapp/stories.html
+++ b/src/main/webapp/stories.html
@@ -175,7 +175,7 @@
               <a href="https://www.redhat.com/en/technologies/jboss-middleware/fuse/" target="_blank">https://www.redhat.com/en/technologies/jboss-middleware/fuse/</a>
             </div>
         </div>
-        
+
         <div class="row mb-5 mt-5">
             <div class="col">
               <h4 class="pb-3 mb-4">Wizzio</h4>
@@ -183,7 +183,25 @@
               <a href="http://www.novabase.com/financial/wizzio/" target="_blank">http://www.novabase.com/financial/wizzio/</a>
             </div>
         </div>
-        
+
+        <div class="row mb-5 mt-5">
+          <div class="col">
+            <h4 class="pb-3 mb-4">Netflix</h4>
+            <p><i>The Netflix media pipeline processes thousands of new shows and movies every day so that you can watch them on any device anywhere.
+              We use a forward chaining rule engine to coordinate all of this work in multiple workflows.
+              Hosting these workflows in a reliable, scalable and cost effective manner is a huge challenge at our scale.
+              In this talk, we will introduce the design of Netflix’s next generation rule engine framework.
+              The goal is to boost modularity, increase developer productivity and decrease operational overhead.
+              The new system is a platform as a service that lets workflow developers focus on workflow data model,
+              execution conditions, and remote function invocations without worrying about how to deploy, scale, and monitor it.
+              The system uses the OSGI framework to build separation among workflows and leverages Apache Karaf as the runtime container.
+              Other interesting topics such as workflow bundle management and a novel rule domain specific language will be covered in this talk.
+              Keywords:nRule engine, OSGI, Apache Karaf, Serverless.</i><br>
+              (<a href="https://www.apachecon.com/acna19/s/#/scheduledEvent/1209">ApacheCon 2019 Event - Serverless: Multi-tenant Rule Engine Service Powered by Apache Karaf</a>)</p>
+            <a href="https://www.netflix.com" target="_blank">https://www.netflix.com</a>
+          </div>
+        </div>
+
       </div><!-- Run on Karaf -->
 
       <div class="container">
