--- a/src/main/webapp/download.html
+++ b/src/main/webapp/download.html
@@ -71,7 +71,7 @@
             <div class="card-body d-flex flex-column align-items-start">
               <strong class="d-inline-block mb-2 text-success"><i class="fas fa-circle"></i> Latest release</strong>
               <h3 class="mb-0 text-dark">Karaf Runtime <span class="text-muted">4.2.8</span></h3>
-              <div class="mb-1 text-muted">January 14 2020</div>
+              <div class="mb-1 text-muted">January 23 2020</div>
                 <p class="card-text mb-auto">
                     Binary Distribution :
                     <a href="http://www.apache.org/dyn/closer.lua/karaf/4.2.8/apache-karaf-4.2.8.tar.gz">tar.gz</a> [<a href="https://www.apache.org/dist/karaf/4.2.8/apache-karaf-4.2.8.tar.gz.asc">PGP</a>] [<a href="https://www.apache.org/dist/karaf/4.2.8/apache-karaf-4.2.8.tar.gz.sha512">SHA512</a>] -
@@ -180,10 +180,10 @@
                       <td>4.3.x</td>
                       <td>7</td>
                       <td>8 / 9 / 10 / 11</td>
-                      <td class="text-success">On Development</td>
+                      <td class="text-success">Preview</td>
                       <td></td>
                       <td>4.3.0.RC1</td>
-                      <td>Dec '19</td>
+                      <td>Jan '20</td>
                     </tr>
                     <tr>
                       <td>4.2.x</td>
@@ -322,7 +322,7 @@
                       <td class="text-success">On Development</td>
                       <td></td>
                       <td>4.2.0</td>
-                      <td>Jan '19</td>
+                      <td>Feb '20</td>
                     </tr>
                     <tr>
                       <td>4.1.x</td>
@@ -524,7 +524,7 @@
                         <td class="text-success">Stable</td>
                         <td>2.2.0</td>
                         <td>2.3.0</td>
-                        <td>Dec '19</td>
+                        <td>Feb '20</td>
                     </tr>
                   </tbody>
                 </table>
