Announcing Karaf Meetup

--- a/src/main/webapp/news.html
+++ b/src/main/webapp/news.html
@@ -69,11 +69,11 @@
             <div class="card-body d-flex flex-column align-items-start">
               <strong class="d-inline-block mb-2 text-primary"><i class="fas fa-globe"></i> World</strong>
               <h3 class="mb-0">
-                <a class="text-dark">ApacheCon North America</a>
+                <a class="text-dark">Apache Karaf European Meetup</a>
               </h3>
-              <div class="mb-1 text-muted">September 24-27, 2018</div>
-              <p class="card-text mb-auto">JB will talk about Apache Karaf and how to build a complete enterprise platform mixing Karaf and his subprojects on thursday the 27th September 2018 in Montréal Canada. Save the date !</p>
-              <a href="https://apachecon.dukecon.org/acna/2018/#/scheduledEvent/ea030ef30725de221" target="_blank">Learn more</a>
+              <div class="mb-1 text-muted">April 30, 2020</div>
+              <p class="card-text mb-auto">Join the first Apache Karaf European Meetup on April 30, 2020. It will be located in Karlsruhe, Germany and hosted by <a href="http://www.codecentric.de">Codecentric</a>. Meet the people behind the project and enjoy talks and discussions.</p>
+              <a href="https://www.meetup.com/Paris-Apache-Karaf-Meetup-Group/events/269056325/" target="_blank">Register and Learn more</a>
             </div>
           </div>
         </div>
@@ -1883,6 +1883,7 @@
               <div class="p-3">
                 <h4 class="font-italic">Archives</h4>
                 <ol class="list-unstyled mb-0">
+                    <li><a href="#2020">2020</a></li>
                     <li><a href="#2019">2019</a></li>
                     <li><a href="#2018">2018</a></li>
                     <li><a href="#2017">2017</a></li>
