--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -87,6 +87,13 @@
           <div class="carousel-item active">
             <div class="container">
               <div class="carousel-caption">
+                <p><strong>Apache Karaf European Meetup on April 30th 2020</strong> - The first Apache Karaf European Meetup will be on April 30th 2020, in Karlsruhe, Germany (<a href="news.html">Details</a>)</p>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="container">
+              <div class="carousel-caption">
                 <p><strong>Karaf Runtime 4.2.8 has been released! (23/1/20)</strong> - This is an update patch for Apache Karaf 4.2.x, containing bug fixes and improvements. (<a href="news.html">Details</a>)</p>
               </div>
             </div>
