Adding blog post about new Decanter alerting service

--- a/src/main/webapp/documentation.html
+++ b/src/main/webapp/documentation.html
@@ -396,6 +396,9 @@
             <div class="col">
               <h2 class="pb-3 mb-4 font-italic border-bottom"><i class="fas fa-glasses"></i> Articles</h2>
               <div>
+                <a href="http://blog.nanthrax.net/?p=991">Apache Karaf Decanter 2.3.0, the new alerting service</a>
+              </div><!-- /.blog-post -->
+              <div>
                 <a href="http://blog.nanthrax.net/?p=954">Introducing Apache Karaf Cave 4.2.x</a>
               </div><!-- /.blog-post -->
               <div>
