Add new blog post about Apache CXF metrics with Apache Karaf Decanter

--- a/src/main/webapp/documentation.html
+++ b/src/main/webapp/documentation.html
@@ -396,6 +396,9 @@
             <div class="col">
               <h2 class="pb-3 mb-4 font-italic border-bottom"><i class="fas fa-glasses"></i> Articles</h2>
               <div>
+                <a href="http://blog.nanthrax.net/?p=1007">Apache CXF metrics with Apache Karaf Decanter</a>
+              </div><!-- /.blog-post -->
+              <div>
                 <a href="http://blog.nanthrax.net/?p=1002">Apache Karaf Decanter 2.3.0, new Prometheus appender</a>
               </div><!-- /.blog-post -->
               <div>
