--- a/src/main/webapp/archives.html
+++ b/src/main/webapp/archives.html
@@ -906,6 +906,14 @@
                     </thead>
                     <tbody>
                         <tr>
+                            <td>2.2.0</td>
+                            <td><a href="javascript:var w = window.open('download.html')">Installation Instructions</a></td>
+                            <td><a href="http://archive.apache.org/dist/karaf/decanter/2.2.0/apache-karaf-decanter-2.2.0-src.tar.gz">tar.gz</a> [<a href="http://archive.apache.org/dist/karaf/decanter/2.2.0/apache-karaf-decanter-2.2.0-src.tar.gz.asc">PGP</a>] [<a href="http://archive.apache.org/dist/karaf/decanter/2.2.0/apache-karaf-decanter-2.2.0-src.tar.gz.sha512">SHA512</a>]<br>
+                                <a href="http://archive.apache.org/dist/karaf/decanter/2.2.0/apache-karaf-decanter-2.2.0-src.zip">zip</a> [<a href="http://archive.apache.org/dist/karaf/decanter/2.2.0/apache-karaf-decanter-2.2.0-src.zip.asc">PGP</a>] [<a href="http://archive.apache.org/dist/karaf/decanter/2.2.0/apache-karaf-decanter-2.2.0-src.zip.sha512">SHA512</a>]
+                            </td>
+                            <td><a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12344040')">Release Notes</a></td>
+                        </tr>
+                        <tr>
                             <td>2.1.0</td>
                             <td><a href="javascript:var w = window.open('download.html')">Installation Instructions</a></td>
                             <td><a href="http://archive.apache.org/dist/karaf/decanter/2.1.0/apache-karaf-decanter-2.1.0-src.tar.gz">tar.gz</a> [<a href="http://archive.apache.org/dist/karaf/decanter/2.1.0/apache-karaf-decanter-2.1.0-src.tar.gz.asc">PGP</a>] [<a href="http://archive.apache.org/dist/karaf/decanter/2.1.0/apache-karaf-decanter-2.1.0-src.tar.gz.sha512">SHA512</a>]<br>
