--- a/src/main/webapp/news.html
+++ b/src/main/webapp/news.html
@@ -106,6 +106,28 @@
               <h2 class="pb-3 mb-4 font-italic border-bottom"><i class="fas fa-bullhorn"></i> Fresh news</h2>
 
               <div class="pb-4 mb-3 border-bottom">
+                <h3 class="text-dark">Karaf Decanter 2.3.0 has been released! <span class="text-muted">April 6, 2020</span></h3>
+                <p>This is a first minor release for Apache Decanter 2.3.x, containing bug fixes, improvements and dependency upgrades.</p>
+                <p>Among this new features, we have:</p>
+                <ul>
+                  <li>Add prometheus appender</li>
+                  <li>Improve Decanter alerting by supporting time series and multi-attributes</li>
+                  <li>Be able to personalize the email sent by the alerter</li>
+                  <li>Avoid blacklisting of the appenders</li>
+                  <li>Improve Split and Regex parser by casting data</li>
+                  <li>Be able to persist AlertStore data</li>
+                  <li>Use JDK8 in Decanter</li>
+                  <li>Improve SOAP collector by adding request response time</li>
+                  <li>Use a thread pool executor in the collector system</li>
+                  <li>Use non typed index in elasticsearch appender</li>
+                  <li>Add itest coverage in Decanter</li>
+                  <li>Be able to use property/templating in email alerter</li>
+                </ul>
+                <a class="btn btn-outline-primary" href="download.html">Download &raquo;</a>
+                <a class="btn btn-outline-primary" href="https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12345165" target="_blank">Release Notes &raquo;</a>
+              </div><!-- /.blog-post -->
+
+              <div class="pb-4 mb-3 border-bottom">
                 <h3 class="text-dark">Karaf Runtime 4.2.8 has been released! <span class="text-muted">January 14, 2020</span></h3>
                 <p>This is an update patch for Apache Karaf 4.2.x, containing bug fixes, improvements and dependency upgrades.</p>
                 <p>Among this new features, we have:</p>
