Update meetup location

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -94,7 +94,7 @@
           <div class="carousel-item">
             <div class="container">
               <div class="carousel-caption">
-                <p><strong>Apache Karaf European Meetup on April 30th 2020</strong> - The first Apache Karaf European Meetup will be on April 30th 2020, in Karlsruhe, Germany (<a href="news.html">Details</a>)</p>
+                <p><strong>Apache Karaf European Meetup on April 30th 2020</strong> - The first Apache Karaf European Meetup will be on April 30th 2020, online, free to join (<a href="news.html">Details</a>)</p>
               </div>
             </div>
           </div>
