--- a/src/main/webapp/news.html
+++ b/src/main/webapp/news.html
@@ -72,7 +72,7 @@
                 <a class="text-dark">Apache Karaf European Meetup</a>
               </h3>
               <div class="mb-1 text-muted">April 30, 2020</div>
-              <p class="card-text mb-auto">Join the first Apache Karaf European Meetup on April 30, 2020. It will be located in Karlsruhe, Germany and hosted by <a href="http://www.codecentric.de">Codecentric</a>. Meet the people behind the project and enjoy talks and discussions.</p>
+              <p class="card-text mb-auto">Join the first Apache Karaf European Meetup on April 30, 2020. It's a online meetup, free to join. You just have to register on the following link. Thanks <a href="http://www.codecentric.de">Codecentric</a> for sponsoring the meetup. Meet the people behind the project and enjoy talks and discussions.</p>
               <a href="https://www.meetup.com/Paris-Apache-Karaf-Meetup-Group/events/269056325/" target="_blank">Register and Learn more</a>
             </div>
           </div>
