Add Decanter 2.4.0 release

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -87,6 +87,13 @@
           <div class="carousel-item active">
             <div class="container">
               <div class="carousel-caption">
+                <p><strong>Karaf Decanter 2.4.0 has been released! (30/4/20)</strong> - This is a new major update release for Apache Decanter 2.x, containing bug fixes, new features, and improvements. (<a href="news.html">Details</a>)</p>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item active">
+            <div class="container">
+              <div class="carousel-caption">
                 <p><strong>Karaf Decanter 2.3.0 has been released! (6/4/20)</strong> - This is the first minor release for Apache Decanter 2.3.x, containing bug fixes and improvements. (<a href="news.html">Details</a>)</p>
               </div>
             </div>
@@ -271,7 +278,7 @@
           <div class="col-md-7 order-md-2">
             <h2 class="featurette-heading">Monitoring, alerting, and BAM with <span class="text-muted">Karaf Decanter.</span></h2>
             <p class="lead">You need a monitoring solution for Karaf and related ? You need a BAM (Business Activity Monitoring) platform for your application ? Karaf Decanter can be very convenient for you ! Decanter provides ready to use monitoring solution. It's also completely extensible and customizable.</p>
-            <p>Last version <strong>2.3.0</strong> - (6/4/20)</p>
+            <p>Last version <strong>2.4.0</strong> - (30/4/20)</p>
             <p><a class="btn btn-primary" href="projects.html" role="button">Learn more &raquo;</a></p>
           </div>
           <div class="col-md-5 order-md-1">
