--- a/src/main/webapp/download.html
+++ b/src/main/webapp/download.html
@@ -130,16 +130,16 @@
           <div class="card flex-md-row mb-4 box-shadow h-md-250">
             <div class="card-body d-flex flex-column align-items-start">
               <strong class="d-inline-block mb-2 text-success"><i class="fas fa-circle"></i> Latest release</strong>
-              <h3 class="mb-0 text-dark">Karaf Decanter <span class="text-muted">2.3.0</span></h3>
-              <div class="mb-1 text-muted">April 6, 2020</div>
+              <h3 class="mb-0 text-dark">Karaf Decanter <span class="text-muted">2.4.0</span></h3>
+              <div class="mb-1 text-muted">April 30, 2020</div>
               <p class="card-text mb-auto">
                 Installation Instructions:
                   <a href="#decanter-installation">installation</a>
               </p>
               <p class="card-text mb-auto">
                 Source Distribution :
-                  <a href="http://www.apache.org/dyn/closer.lua/karaf/decanter/2.3.0/apache-karaf-decanter-2.3.0-src.tar.gz">tar.gz</a> [<a href="https://www.apache.org/dist/karaf/decanter/2.3.0/apache-karaf-decanter-2.3.0-src.tar.gz.asc">PGP</a>] [<a href="https://www.apache.org/dist/karaf/decanter/2.3.0/apache-karaf-decanter-2.3.0-src.tar.gz.sha512">SHA512</a>] -
-                                <a href="http://www.apache.org/dyn/closer.lua/karaf/decanter/2.3.0/apache-karaf-decanter-2.3.0-src.zip">zip</a> [<a href="https://www.apache.org/dist/karaf/decanter/2.3.0/apache-karaf-decanter-2.3.0-src.zip.asc">PGP</a>] [<a href="https://www.apache.org/dist/karaf/decanter/2.3.0/apache-karaf-decanter-2.3.0-src.zip.sha512">SHA512</a>]
+                  <a href="http://www.apache.org/dyn/closer.lua/karaf/decanter/2.4.0/apache-karaf-decanter-2.4.0-src.tar.gz">tar.gz</a> [<a href="https://www.apache.org/dist/karaf/decanter/2.4.0/apache-karaf-decanter-2.4.0-src.tar.gz.asc">PGP</a>] [<a href="https://www.apache.org/dist/karaf/decanter/2.4.0/apache-karaf-decanter-2.4.0-src.tar.gz.sha512">SHA512</a>] -
+                                <a href="http://www.apache.org/dyn/closer.lua/karaf/decanter/2.4.0/apache-karaf-decanter-2.4.0-src.zip">zip</a> [<a href="https://www.apache.org/dist/karaf/decanter/2.4.0/apache-karaf-decanter-2.4.0-src.zip.asc">PGP</a>] [<a href="https://www.apache.org/dist/karaf/decanter/2.4.0/apache-karaf-decanter-2.4.0-src.zip.sha512">SHA512</a>]
               </p>
               <a class="btn btn-outline-dark mt-3" href="https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12345165" role="button" target="_blank">Release note &raquo;</a>
             </div>
@@ -496,9 +496,8 @@
                 <div class="alert alert-dark" role="alert">
                     <samp>
                         feature:repo-add decanter<br>
-                        feature:install decanter-appender-elasticsearch<br>
-                        feature:install decanter-collector-log<br>
-                        feature:install decanter-collector-jmx<br>
+                        feature:install decanter-appender-...<br>
+                        feature:install decanter-collector-....<br>
                     </samp>
                 </div>
               </div>
@@ -522,8 +521,8 @@
                         <td>2.0.x</td>
                         <td>4.x</td>
                         <td class="text-success">Stable</td>
-                        <td>2.3.0</td>
                         <td>2.4.0</td>
+                        <td>2.5.0</td>
                         <td>Jun '20</td>
                     </tr>
                   </tbody>
