--- a/src/main/webapp/news.html
+++ b/src/main/webapp/news.html
@@ -106,6 +106,22 @@
               <h2 class="pb-3 mb-4 font-italic border-bottom"><i class="fas fa-bullhorn"></i> Fresh news</h2>
 
               <div class="pb-4 mb-3 border-bottom">
+                <h3 class="text-dark">Karaf Decanter 2.4.0 has been released! <span class="text-muted">April 30, 2020</span></h3>
+                <p>This is a new major release for Apache Decanter 2.x, containing bug fixes, new features, improvements and dependency upgrades.</p>
+                <p>Among this new features, we have:</p>
+                <ul>
+                  <li>New processing layer with first aggregator processor</li>
+                  <li>New prometheus collector</li>
+                  <li>New elasticsearch collector</li>
+                  <li>New configadmin collector</li>
+                  <li>New oshi collector</li>
+                  <li>New redis collector</li>            
+                </ul>
+                <a class="btn btn-outline-primary" href="download.html">Download &raquo;</a>
+                <a class="btn btn-outline-primary" href="https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12346613" target="_blank">Release Notes &raquo;</a>
+              </div><!-- /.blog-post -->
+
+              <div class="pb-4 mb-3 border-bottom">
                 <h3 class="text-dark">Karaf Decanter 2.3.0 has been released! <span class="text-muted">April 6, 2020</span></h3>
                 <p>This is a first minor release for Apache Decanter 2.3.x, containing bug fixes, improvements and dependency upgrades.</p>
                 <p>Among this new features, we have:</p>
