--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -91,7 +91,7 @@
               </div>
             </div>
           </div>
-          <div class="carousel-item active">
+          <div class="carousel-item">
             <div class="container">
               <div class="carousel-caption">
                 <p><strong>Karaf Decanter 2.3.0 has been released! (6/4/20)</strong> - This is the first minor release for Apache Decanter 2.3.x, containing bug fixes and improvements. (<a href="news.html">Details</a>)</p>
