--- a/archives.html
+++ b/archives.html
@@ -31,6 +31,16 @@ permalink: /archives
                 </thead>
                 <tbody>
                     <tr>
+                        <td>4.2.8</td>
+                        <td><a href="http://archive.apache.org/dist/karaf/4.2.8/apache-karaf-4.2.8.tar.gz">tar.gz</a> [<a href="https://archive.apache.org/dist/karaf/4.2.8/apache-karaf-4.2.8.tar.gz.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.2.8/apache-karaf-4.2.8.tar.gz.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.2.8/apache-karaf-4.2.8.tar.gz.sha512">SHA512</a>]<br>
+                            <a href="http://archive.apache.org/dist/karaf/4.2.8/apache-karaf-4.2.8.zip">zip</a> [<a href="https://archive.apache.org/dist/karaf/4.2.8/apache-karaf-4.2.8.zip.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.2.8/apache-karaf-4.2.8.zip.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.2.8/apache-karaf-4.2.8.zip.sha512">SHA512</a>]
+                        </td>
+                        <td><a href="http://archive.apache.org/dist/karaf/4.2.8/apache-karaf-4.2.8-src.tar.gz">tar.gz</a> [<a href="https://archive.apache.org/dist/karaf/4.2.8/apache-karaf-4.2.8-src.tar.gz.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.2.8/apache-karaf-4.2.8-src.tar.gz.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.2.8/apache-karaf-4.2.8-src.tar.gz.sha512">SHA512</a>]<br>
+                            <a href="http://archive.apache.org/dist/karaf/4.2.8/apache-karaf-4.2.8-src.zip">zip</a> [<a href="https://archive.apache.org/dist/karaf/4.2.8/apache-karaf-4.2.8-src.zip.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.2.8/apache-karaf-4.2.8-src.zip.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.2.8/apache-karaf-4.2.8-src.zip.sha512">SHA512</a>]
+                        </td>
+                        <td><a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12346100')">Release Notes</a></td>
+                    </tr>
+                    <tr>
                         <td>4.2.7</td>
                         <td><a href="http://archive.apache.org/dist/karaf/4.2.7/apache-karaf-4.2.7.tar.gz">tar.gz</a> [<a href="https://archive.apache.org/dist/karaf/4.2.7/apache-karaf-4.2.7.tar.gz.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.2.7/apache-karaf-4.2.7.tar.gz.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.2.7/apache-karaf-4.2.7.tar.gz.sha512">SHA512</a>]<br>
                             <a href="http://archive.apache.org/dist/karaf/4.2.7/apache-karaf-4.2.7.zip">zip</a> [<a href="https://archive.apache.org/dist/karaf/4.2.7/apache-karaf-4.2.7.zip.asc">PGP</a>] [<a href="https://archive.apache.org/dist/karaf/4.2.7/apache-karaf-4.2.7.zip.md5">MD5</a>] [<a href="https://archive.apache.org/dist/karaf/4.2.7/apache-karaf-4.2.7.zip.sha512">SHA512</a>]
