--- a/news.html
+++ b/news.html
@@ -50,6 +50,23 @@ permalink: /news
               <h2 class="pb-3 mb-4 font-italic border-bottom"><i class="fas fa-bullhorn"></i> Fresh news</h2>
 
               <div class="pb-4 mb-3 border-bottom">
+                <h3 class="text-dark">Karaf Runtime 4.2.9 has been released! <span class="text-muted">June 9, 2020</span></h3>
+                <p>This is an update patch for Apache Karaf 4.2.x, containing bug fixes, improvements and dependency upgrades.</p>
+                <p>Among this new features, we have:</p>
+                <ul>
+                  <li>VerifyMojo performance improvement</li>
+                  <li>Disallow calling getMBeansFromURL</li>
+                  <li>Prevent JMX rebinding</li>
+                  <li>Provide Spring Security 5.3.x feature</li>
+                </ul>
+                <div class="pb-3">
+                  <em>See the release note for the librairies update.</em>
+                </div>
+                <a class="btn btn-outline-primary" href="/documentation.html">Download &raquo;</a>
+                <a class="btn btn-outline-primary" href="https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12346465" target="_blank">Release Notes &raquo;</a>
+              </div><!-- /.blog-post -->
+
+              <div class="pb-4 mb-3 border-bottom">
                 <h3 class="text-dark">Karaf Decanter 2.4.0 has been released! <span class="text-muted">April 30, 2020</span></h3>
                 <p>This is a new major release for Apache Decanter 2.x, containing bug fixes, new features, improvements and dependency upgrades.</p>
                 <p>Among this new features, we have:</p>
