--- a/download.html
+++ b/download.html
@@ -14,19 +14,19 @@ permalink: /download
           <div class="card flex-md-row mb-4 box-shadow h-md-250">
             <div class="card-body d-flex flex-column align-items-start">
               <strong class="d-inline-block mb-2 text-success"><i class="fas fa-circle"></i> Latest release</strong>
-              <h3 class="mb-0 text-dark">Karaf Runtime <span class="text-muted">4.2.8</span></h3>
-              <div class="mb-1 text-muted">January 23 2020</div>
+              <h3 class="mb-0 text-dark">Karaf Runtime <span class="text-muted">4.2.9</span></h3>
+              <div class="mb-1 text-muted">June 9, 2020</div>
                 <p class="card-text mb-auto">
                     Binary Distribution :
-                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.2.8/apache-karaf-4.2.8.tar.gz">tar.gz</a> [<a href="https://www.apache.org/dist/karaf/4.2.8/apache-karaf-4.2.8.tar.gz.asc">PGP</a>] [<a href="https://www.apache.org/dist/karaf/4.2.8/apache-karaf-4.2.8.tar.gz.sha512">SHA512</a>] -
-                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.2.8/apache-karaf-4.2.8.zip">zip</a> [<a href="https://www.apache.org/dist/karaf/4.2.8/apache-karaf-4.2.8.zip.asc">PGP</a>] [<a href="https://www.apache.org/dist/4.2.8/apache-karaf-4.2.8.zip.sha512">SHA512</a>]
+                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.2.9/apache-karaf-4.2.9.tar.gz">tar.gz</a> [<a href="https://www.apache.org/dist/karaf/4.2.9/apache-karaf-4.2.9.tar.gz.asc">PGP</a>] [<a href="https://www.apache.org/dist/karaf/4.2.9/apache-karaf-4.2.9.tar.gz.sha512">SHA512</a>] -
+                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.2.9/apache-karaf-4.2.9.zip">zip</a> [<a href="https://www.apache.org/dist/karaf/4.2.9/apache-karaf-4.2.9.zip.asc">PGP</a>] [<a href="https://www.apache.org/dist/4.2.9/apache-karaf-4.2.9.zip.sha512">SHA512</a>]
                 </p>
                 <p class="card-text mb-auto">
                     Source Distribution :
-                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.2.8/apache-karaf-4.2.8-src.tar.gz">tar.gz</a> [<a href="https://www.apache.org/dist/karaf/4.2.8/apache-karaf-4.2.8-src.tar.gz.asc">PGP</a>] [<a href="https://www.apache.org/dist/karaf/4.2.8/apache-karaf-4.2.8-src.tar.gz.sha512">SHA512</a>] -
-                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.2.8/apache-karaf-4.2.8-src.zip">zip</a> [<a href="https://www.apache.org/dist/karaf/4.2.8/apache-karaf-4.2.8-src.zip.asc">PGP</a>] [<a href="https://www.apache.org/dist/karaf/4.2.8/apache-karaf-4.2.8-src.zip.sha512">SHA512</a>]
+                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.2.9/apache-karaf-4.2.9-src.tar.gz">tar.gz</a> [<a href="https://www.apache.org/dist/karaf/4.2.9/apache-karaf-4.2.9-src.tar.gz.asc">PGP</a>] [<a href="https://www.apache.org/dist/karaf/4.2.9/apache-karaf-4.2.9-src.tar.gz.sha512">SHA512</a>] -
+                    <a href="http://www.apache.org/dyn/closer.lua/karaf/4.2.9/apache-karaf-4.2.9-src.zip">zip</a> [<a href="https://www.apache.org/dist/karaf/4.2.9/apache-karaf-4.2.9-src.zip.asc">PGP</a>] [<a href="https://www.apache.org/dist/karaf/4.2.9/apache-karaf-4.2.9-src.zip.sha512">SHA512</a>]
                 </p>
-                <a class="btn btn-outline-dark mt-3" href="https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12346100" role="button" target="_blank">Release note &raquo;</a>
+                <a class="btn btn-outline-dark mt-3" href="https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12346465" role="button" target="_blank">Release note &raquo;</a>
             </div>
           </div>
         </div>
@@ -125,18 +125,18 @@ permalink: /download
                       <td>7</td>
                       <td>8 / 9 / 10 / 11</td>
                       <td class="text-success">Preview</td>
-                      <td></td>
                       <td>4.3.0.RC1</td>
-                      <td>Jan '20</td>
+                      <td>4.3.0.RC2</td>
+                      <td>Jul '20</td>
                     </tr>
                     <tr>
                       <td>4.2.x</td>
                       <td>6</td>
                       <td>8 / 9 / 10 / 11</td>
                       <td class="text-success">Stable</td>
-                      <td>4.2.8</td>
                       <td>4.2.9</td>
-                      <td>Mar '20</td>
+                      <td>4.2.10</td>
+                      <td>Aug '20</td>
                     </tr>
                     <tr>
                         <td>4.1.x</td>
@@ -495,7 +495,7 @@ permalink: /download
                 </code>
                 <br>
                 <code>
-                    % gpg --verify apache-karaf-4.2.8.tar.gz.asc apache-karaf-4.2.8.tar.gz
+                    % gpg --verify apache-karaf-4.2.9.tar.gz.asc apache-karaf-4.2.9.tar.gz
                 </code>
               </p>
             </div>
