Add blog post about log4j2 appenders

--- a/documentation.html
+++ b/documentation.html
@@ -340,6 +340,9 @@ permalink: /documentation
             <div class="col">
               <h2 class="pb-3 mb-4 font-italic border-bottom"><i class="fas fa-glasses"></i> Articles</h2>
               <div>
+                <a href="http://blog.nanthrax.net/?p=1023">Apache Karaf and log4j2 appenders</a>
+              </div><!-- /.blog-post -->
+              <div>
                 <a href="http://blog.nanthrax.net/?p=1019">New collectors in Apache Karaf Decanter 2.4.0</a>
               </div><!-- /.blog-post -->
               <div>
