--- a/news.html
+++ b/news.html
@@ -50,6 +50,18 @@ permalink: /news
               <h2 class="pb-3 mb-4 font-italic border-bottom"><i class="fas fa-bullhorn"></i> Fresh news</h2>
 
               <div class="pb-4 mb-3 border-bottom">
+                <h3 class="text-dark">Karaf Decanter 2.5.0 has been released! <span class="text-muted">June 22, 2020</span></h3>
+                <p>Apache Karaf Decanter 2.5.0 is a major release on the 2.x series. It provides dependency updates and improvements especially:</p>
+                <ul>
+                  <li>extended REST support in REST collector and appender (REST verbs, basic authentication, custom headers, ...)</li>
+                  <li>connected mode on the socket collector</li>
+                  <li>streaming mode on the socket appender</li>
+                  <li>new Pax Web Jetty handler collector</li>
+                </ul>
+                <a class="btn btn-outline-primary" href="download.html">Download &raquo;</a>
+                <a class="btn btn-outline-primary" href="https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12348163" target="_blank">Release Notes &raquo;</a>
+              </div><!-- /.blog-post -->
+              <div class="pb-4 mb-3 border-bottom">
                 <h3 class="text-dark">Karaf Runtime 4.2.9 has been released! <span class="text-muted">June 9, 2020</span></h3>
                 <p>This is an update patch for Apache Karaf 4.2.x, containing bug fixes, improvements and dependency upgrades.</p>
                 <p>Among this new features, we have:</p>
