--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@ permalink: /
       <div class="carousel-item active">
         <div class="container">
           <div class="carousel-caption">
+            <p><strong>Karaf Decanter 2.5.0 has been released! (22/5/20)</strong> - This is a new major update release for Apache Decanter 2.x, containing bug fixes, new features, and improvements. (<a href="news.html">Details</a>)</p>
+          </div>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <div class="container">
+          <div class="carousel-caption">
             <p><strong>Karaf Runtime 4.2.9 has been released! (9/6/20)</strong> - This is an update patch for Apache Karaf 4.2.x, containing bug fixes and improvements. (<a href="/news.html">Details</a>)</p>
           </div>
         </div>
@@ -58,13 +65,6 @@ permalink: /
         <div class="container">
           <div class="carousel-caption">
             <p><strong>Karaf Runtime 4.2.8 has been released! (23/1/20)</strong> - This is an update patch for Apache Karaf 4.2.x, containing bug fixes and improvements. (<a href="/news.html">Details</a>)</p>
-          </div>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <div class="container">
-          <div class="carousel-caption">
-            <p><strong>Karaf Cave 4.2.1 has been released! (29/11/19)</strong> - This is update patch for Apache Cave 4.2.x, containing bug fixes and improvements. (<a href="/news.html">Details</a>)</p>
           </div>
         </div>
       </div>
