--- a/news.html
+++ b/news.html
@@ -50,6 +50,19 @@ permalink: /news
               <h2 class="pb-3 mb-4 font-italic border-bottom"><i class="fas fa-bullhorn"></i> Fresh news</h2>
 
               <div class="pb-4 mb-3 border-bottom">
+                <h3 class="text-dark">Karaf Cellar 4.2.0 has been released! <span class="text-muted">July 18, 2020</span></h3>
+                <p>Apache Karaf Cellar 4.2.0 is a major release on the 4.x series. It provides dependency updates and improvements especially:</p>
+                <ul>
+                  <li>possibility to use JCache with appended hazelcast instance</li>
+                  <li>all cluster:* commands should use the node alias when possible</li>
+                  <li>improve cellar groups configuration synchronisation from hazelcast</li>
+                  <li>implement better support to configure Kubernetes API client</li>
+                </ul>
+                <a class="btn btn-outline-primary" href="download.html">Download &raquo;</a>
+                <a class="btn btn-outline-primary" href="https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12344252" target="_blank">Release Notes &raquo;</a>
+              </div><!-- /.blog-post -->
+
+              <div class="pb-4 mb-3 border-bottom">
                 <h3 class="text-dark">Karaf Decanter 2.5.0 has been released! <span class="text-muted">June 22, 2020</span></h3>
                 <p>Apache Karaf Decanter 2.5.0 is a major release on the 2.x series. It provides dependency updates and improvements especially:</p>
                 <ul>
@@ -61,6 +74,7 @@ permalink: /news
                 <a class="btn btn-outline-primary" href="download.html">Download &raquo;</a>
                 <a class="btn btn-outline-primary" href="https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12348163" target="_blank">Release Notes &raquo;</a>
               </div><!-- /.blog-post -->
+
               <div class="pb-4 mb-3 border-bottom">
                 <h3 class="text-dark">Karaf Runtime 4.2.9 has been released! <span class="text-muted">June 9, 2020</span></h3>
                 <p>This is an update patch for Apache Karaf 4.2.x, containing bug fixes, improvements and dependency upgrades.</p>
