--- a/archives.html
+++ b/archives.html
@@ -606,6 +606,14 @@ permalink: /archives
                 </thead>
                 <tbody>
                     <tr>
+                        <td>4.1.3</td>
+                        <td><a href="javascript:var w = window.open('download.html')">Installation Instructions</a></td>
+                        <td><a href="http://archive.apache.org/dist/karaf/cellar/4.1.3/apache-karaf-cellar-4.1.3-src.tar.gz">tar.gz</a> [<a href="http://archive.apache.org/dist/karaf/cellar/4.1.3/apache-karaf-cellar-4.1.3-src.tar.gz.asc">PGP</a>] [<a href="http://archive.apache.org/dist/karaf/cellar/4.1.3/apache-karaf-cellar-4.1.3-src.tar.gz.md5">MD5</a>] [<a href="http://archive.apache.org/dist/karaf/cellar/4.1.3/apache-karaf-cellar-4.1.3-src.tar.gz.sha1">SHA1</a>]<br>
+                            <a href="http://archive.apache.org/dist/karaf/cellar/4.1.3/apache-karaf-cellar-4.1.3-src.zip">zip</a> [<a href="http://archive.apache.org/dist/karaf/cellar/4.1.3/apache-karaf-cellar-4.1.3-src.zip.asc">PGP</a>] [<a href="http://archive.apache.org/dist/karaf/cellar/4.1.3/apache-karaf-cellar-4.1.3-src.zip.md5">MD5</a>] [<a href="http://archive.apache.org/dist/karaf/cellar/4.1.3/apache-karaf-cellar-4.1.3-src.zip.sha1">SHA1</a>]
+                        </td>
+                        <td><a href="javascript:var w = window.open('https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12344979')">Release Notes</a></td>
+                    </tr>
+                    <tr>
                         <td>4.1.2</td>
                         <td><a href="javascript:var w = window.open('download.html')">Installation Instructions</a></td>
                         <td><a href="http://archive.apache.org/dist/karaf/cellar/4.1.2/apache-karaf-cellar-4.1.2-src.tar.gz">tar.gz</a> [<a href="http://archive.apache.org/dist/karaf/cellar/4.1.2/apache-karaf-cellar-4.1.2-src.tar.gz.asc">PGP</a>] [<a href="http://archive.apache.org/dist/karaf/cellar/4.1.2/apache-karaf-cellar-4.1.2-src.tar.gz.md5">MD5</a>] [<a href="http://archive.apache.org/dist/karaf/cellar/4.1.2/apache-karaf-cellar-4.1.2-src.tar.gz.sha1">SHA1</a>]<br>
