--- a/download.html
+++ b/download.html
@@ -34,18 +34,18 @@ permalink: /download
           <div class="card flex-md-row mb-4 box-shadow h-md-250">
             <div class="card-body d-flex flex-column align-items-start">
               <strong class="d-inline-block mb-2 text-success"><i class="fas fa-circle"></i> Latest release</strong>
-              <h3 class="mb-0 text-dark">Karaf Cellar <span class="text-muted">4.1.3</span></h3>
-              <div class="mb-1 text-muted">February 25, 2019</div>
+              <h3 class="mb-0 text-dark">Karaf Cellar <span class="text-muted">4.2.0</span></h3>
+              <div class="mb-1 text-muted">July 18, 2019</div>
               <p class="card-text mb-auto">
                 Installation Instructions:
                   <a href="#cellar-installation">installation</a>
               </p>
               <p class="card-text mb-auto">
                 Source Distribution :
-                  <a href="http://www.apache.org/dyn/closer.lua/karaf/cellar/4.1.3/apache-karaf-cellar-4.1.3-src.tar.gz">tar.gz</a> [<a href="https://www.apache.org/dist/karaf/cellar/4.1.3/apache-karaf-cellar-4.1.3-src.tar.gz.asc">PGP</a>] [<a href="https://www.apache.org/dist/karaf/cellar/4.1.3/apache-karaf-cellar-4.1.3-src.tar.gz.sha512">SHA512</a>] -
-                                <a href="http://www.apache.org/dyn/closer.lua/karaf/cellar/4.1.3/apache-karaf-cellar-4.1.3-src.zip">zip</a> [<a href="https://www.apache.org/dist/karaf/cellar/4.1.3/apache-karaf-cellar-4.1.3-src.zip.asc">PGP</a>] [<a href="https://www.apache.org/dist/karaf/cellar/4.1.3/apache-karaf-cellar-4.1.3-src.zip.sha512">SHA512</a>]
+                  <a href="http://www.apache.org/dyn/closer.lua/karaf/cellar/4.2.0/apache-karaf-cellar-4.2.0-src.tar.gz">tar.gz</a> [<a href="https://www.apache.org/dist/karaf/cellar/4.2.0/apache-karaf-cellar-4.2.0-src.tar.gz.asc">PGP</a>] [<a href="https://www.apache.org/dist/karaf/cellar/4.2.0/apache-karaf-cellar-4.2.0-src.tar.gz.sha512">SHA512</a>] -
+                                <a href="http://www.apache.org/dyn/closer.lua/karaf/cellar/4.2.0/apache-karaf-cellar-4.2.0-src.zip">zip</a> [<a href="https://www.apache.org/dist/karaf/cellar/4.2.0/apache-karaf-cellar-4.2.0-src.zip.asc">PGP</a>] [<a href="https://www.apache.org/dist/karaf/cellar/4.2.0/apache-karaf-cellar-4.2.0-src.zip.sha512">SHA512</a>]
               </p>
-              <a class="btn btn-outline-dark mt-3" href="https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12344979" role="button" target="_blank">Release note &raquo;</a>
+              <a class="btn btn-outline-dark mt-3" href="https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12344252" role="button" target="_blank">Release note &raquo;</a>
             </div>
           </div>
         </div>
@@ -263,10 +263,10 @@ permalink: /download
                     <tr>
                       <td>4.2.x</td>
                       <td>4.2.x</td>
-                      <td class="text-success">On Development</td>
+                      <td class="text-success">Stable</td>
                       <td></td>
-                      <td>4.2.0</td>
-                      <td>Feb '20</td>
+                      <td>4.2.1</td>
+                      <td>Oct '20</td>
                     </tr>
                     <tr>
                       <td>4.1.x</td>
