--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@ permalink: /
       <div class="carousel-item active">
         <div class="container">
           <div class="carousel-caption">
+            <p><strong>Karaf Cellar 4.2.0 has been released! (18/7/20)</strong> - This is a new major release for Apache Cellar 4.2.x, containing bug fixes and improvements. (<a href="/news.html">Details</a>)</p>
+          </div>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <div class="container">
+          <div class="carousel-caption">
             <p><strong>Karaf Decanter 2.5.0 has been released! (22/5/20)</strong> - This is a new major update release for Apache Decanter 2.x, containing bug fixes, new features, and improvements. (<a href="news.html">Details</a>)</p>
           </div>
         </div>
@@ -58,13 +65,6 @@ permalink: /
         <div class="container">
           <div class="carousel-caption">
             <p><strong>Apache Karaf European Meetup on April 30th 2020</strong> - The first Apache Karaf European Meetup will be on April 30th 2020, online, free to join (<a href="news.html">Details</a>)</p>
-          </div>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <div class="container">
-          <div class="carousel-caption">
-            <p><strong>Karaf Runtime 4.2.8 has been released! (23/1/20)</strong> - This is an update patch for Apache Karaf 4.2.x, containing bug fixes and improvements. (<a href="/news.html">Details</a>)</p>
           </div>
         </div>
       </div>
@@ -163,7 +163,7 @@ permalink: /
       <div class="col-md-7 order-md-2">
         <h2 class="featurette-heading">Manage bunch of clustered instances with <span class="text-muted">Karaf Cellar.</span></h2>
         <p class="lead">You have bunch of Karaf Runtime instances running ? You want to manage those instances as one, spreading the configuration, deployment, etc ? Karaf Cellar is for you. Karaf Cellar is a clustering solution for Karaf. It allows you to manage multiple instances, with synchronization between the instances.</p>
-        <p>Last version <strong>4.1.3</strong> - (25/02/19)</p>
+        <p>Last version <strong>4.2.0</strong> - (18/07/20)</p>
         <p><a class="btn btn-primary" href="/projects.html" role="button">Learn more &raquo;</a></p>
       </div>
       <div class="col-md-5 order-md-1">
