Announce Karaf Cellar 4.2.1 release

--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@ permalink: /
       <div class="carousel-item active">
         <div class="container">
           <div class="carousel-caption">
+            <p><strong>Karaf Cellar 4.2.1 has been released! (21/8/20)</strong> - This is a new major release for Apache Cellar 4.2.x, containing bug fixes and improvements. (<a href="/news.html">Details</a>)</p>
+          </div>
+        </div>
+        <div class="container">
+          <div class="carousel-caption">
             <p><strong>Karaf Cellar 4.2.0 has been released! (18/7/20)</strong> - This is a new major release for Apache Cellar 4.2.x, containing bug fixes and improvements. (<a href="/news.html">Details</a>)</p>
           </div>
         </div>
@@ -58,13 +63,6 @@ permalink: /
         <div class="container">
           <div class="carousel-caption">
             <p><strong>Karaf Decanter 2.3.0 has been released! (6/4/20)</strong> - This is the first minor release for Apache Decanter 2.3.x, containing bug fixes and improvements. (<a href="/news.html">Details</a>)</p>
-          </div>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <div class="container">
-          <div class="carousel-caption">
-            <p><strong>Apache Karaf European Meetup on April 30th 2020</strong> - The first Apache Karaf European Meetup will be on April 30th 2020, online, free to join (<a href="news.html">Details</a>)</p>
           </div>
         </div>
       </div>
