--- a/news.html
+++ b/news.html
@@ -15,9 +15,9 @@ permalink: /news
               <h3 class="mb-0">
                 <a class="text-dark">Apache Karaf European Meetup</a>
               </h3>
-              <div class="mb-1 text-muted">April 30, 2020</div>
-              <p class="card-text mb-auto">Join the first Apache Karaf European Meetup on April 30, 2020. It's a online meetup, free to join. You just have to register on the following link. Thanks <a href="http://www.codecentric.de">Codecentric</a> for sponsoring the meetup. Meet the people behind the project and enjoy talks and discussions.</p>
-              <a href="https://www.meetup.com/Paris-Apache-Karaf-Meetup-Group/events/269056325/" target="_blank">Register and Learn more</a>
+              <div class="mb-1 text-muted">September 29, 2020</div>
+              <p class="card-text mb-auto">Join the Apache Karaf track during ApacheCon @Home !</p>
+              <a href="https://www.apachecon.com/acna2020/index.html" target="_blank">ApacheCon 2020 @Home</a>
             </div>
           </div>
         </div>
@@ -26,10 +26,10 @@ permalink: /news
             <div class="card-body d-flex flex-column align-items-start">
               <strong class="d-inline-block mb-2 text-success"><i class="fas fa-rocket"></i> Announce</strong>
               <h3 class="mb-0">
-                <a class="text-dark">Karaf Runtime 4.2.8</a>
+                <a class="text-dark">Karaf Cellar 4.2.1</a>
               </h3>
-              <div class="mb-1 text-muted">January 14, 2020</div>
-              <p class="card-text mb-auto">This is an update patch for Apache Karaf 4.2.x series. We invite all users to upgrade to this new stable series, bringing a lot of fixes, improvements and dependency upgrades.</p>
+              <div class="mb-1 text-muted">August 21, 2020</div>
+              <p class="card-text mb-auto">This is an important update patch for Apache Karaf Cellar 4.2.x series.</p>
               <a href="#">Learn more</a>
             </div>
           </div>
@@ -48,6 +48,18 @@ permalink: /news
         <div class="row mb-5 mt-5">
             <div class="col-md-10">
               <h2 class="pb-3 mb-4 font-italic border-bottom"><i class="fas fa-bullhorn"></i> Fresh news</h2>
+
+              <div class="pb-4 mb-3 border-bottom">
+                <h3 class="text-dark">Karaf Cellar 4.2.1 has been released! <span class="text-muted">August 21, 2020</span></h3>
+                <p>Apache Karaf Cellar 4.2.1 is a major release on the 4.x series. It provides dependency updates and improvements especially:</p>
+                <ul>
+                  <li>fix startup of the features synchronizer with JDK 1.8</li>
+                  <li>fix hazelcast group manager startup</li>
+                  <li>fix a race condition between ConfigurationAdmin and Cellar group manager</li>
+                </ul>
+                <a class="btn btn-outline-primary" href="download.html">Download &raquo;</a>
+                <a class="btn btn-outline-primary" href="https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12311140&version=12348569" target="_blank">Release Notes &raquo;</a>
+              </div><!-- /.blog-post -->
 
               <div class="pb-4 mb-3 border-bottom">
                 <h3 class="text-dark">Karaf Cellar 4.2.0 has been released! <span class="text-muted">July 18, 2020</span></h3>
