--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@ permalink: /
             <p><strong>Karaf Cellar 4.2.1 has been released! (21/8/20)</strong> - This is a new major release for Apache Cellar 4.2.x, containing bug fixes and improvements. (<a href="/news.html">Details</a>)</p>
           </div>
         </div>
-        <div class="container">
+      </div>
+      <div class="container">
           <div class="carousel-caption">
             <p><strong>Karaf Cellar 4.2.0 has been released! (18/7/20)</strong> - This is a new major release for Apache Cellar 4.2.x, containing bug fixes and improvements. (<a href="/news.html">Details</a>)</p>
           </div>
