--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@ permalink: /
           </div>
         </div>
       </div>
-      <div class="container">
+      <div class="carousel-item">
+        <div class="container">
           <div class="carousel-caption">
             <p><strong>Karaf Cellar 4.2.0 has been released! (18/7/20)</strong> - This is a new major release for Apache Cellar 4.2.x, containing bug fixes and improvements. (<a href="/news.html">Details</a>)</p>
           </div>
