Add ApacheCon@Home track news

--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@ permalink: /
       <div class="carousel-item active">
         <div class="container">
           <div class="carousel-caption">
+            <p><strong>ApacheCon 2020 @Home! (29/9/20)</strong> - Karaf is coming to your living room this September!. (<a href="/news.html">Details</a>)</p>
+          </div>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <div class="container">
+          <div class="carousel-caption">
             <p><strong>Karaf Cellar 4.2.1 has been released! (21/8/20)</strong> - This is a new major release for Apache Cellar 4.2.x, containing bug fixes and improvements. (<a href="/news.html">Details</a>)</p>
           </div>
         </div>
@@ -58,13 +65,6 @@ permalink: /
         <div class="container">
           <div class="carousel-caption">
             <p><strong>Karaf Decanter 2.4.0 has been released! (30/4/20)</strong> - This is a new major update release for Apache Decanter 2.x, containing bug fixes, new features, and improvements. (<a href="news.html">Details</a>)</p>
-          </div>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <div class="container">
-          <div class="carousel-caption">
-            <p><strong>Karaf Decanter 2.3.0 has been released! (6/4/20)</strong> - This is the first minor release for Apache Decanter 2.3.x, containing bug fixes and improvements. (<a href="/news.html">Details</a>)</p>
           </div>
         </div>
       </div>
@@ -266,7 +266,7 @@ permalink: /
       <div class="col-md-5 align-items-center">
         <img class="featurette-image img-fluid mx-auto" src="/images/apache.png" alt="Apache"><br><br><br>
         <a href="https://www.apache.org/events/current-event.html" target="_blank">
-          <img class="featurette-image img-fluid mx-auto" src="https://svn.apache.org/repos/infra/apachecon/www.apachecon.com/images/landingpage/events/acna19.png" alt="ApacheCon" />
+          <img class="featurette-image img-fluid mx-auto" src="https://www.apache.org/events/current-event-234x60.png" alt="ApacheCon" />
         </a>
       </div>
     </div>
