--- a/news.html
+++ b/news.html
@@ -13,11 +13,13 @@ permalink: /news
             <div class="card-body d-flex flex-column align-items-start">
               <strong class="d-inline-block mb-2 text-primary"><i class="fas fa-globe"></i> World</strong>
               <h3 class="mb-0">
-                <a class="text-dark">Apache Karaf European Meetup</a>
+                <a class="text-dark">ApacheCon 2020 @Home</a>
               </h3>
               <div class="mb-1 text-muted">September 29, 2020</div>
-              <p class="card-text mb-auto">Join the Apache Karaf track during ApacheCon @Home !</p>
-              <a href="https://www.apachecon.com/acna2020/index.html" target="_blank">ApacheCon 2020 @Home</a>
+              <p class="card-text mb-auto">Join the Apache Karaf track during ApacheCon @Home!</p>
+              <a href="https://apachecon.com/acah2020/tracks/karaf.html" target="_blank">Karaf Track</a><br>
+              <a href="https://hopin.to/events/apachecon-home" target="_blank">Register</a><br>
+              <a href="https://www.apachecon.com/acna2020/index.html" target="_blank">Learn more</a>
             </div>
           </div>
         </div>
